--- a/app/src/main/res/layout/activity_medium_game.xml
+++ b/app/src/main/res/layout/activity_medium_game.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffd149"
+    android:background="#d29bf7"
     tools:context=".MediumGameActivity">
+
 
     <ImageView
         android:id="@+id/circlem1"
@@ -78,10 +79,10 @@
         android:id="@+id/mediumbtn3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:background="@color/Transparent"
         app:layout_constraintBottom_toBottomOf="@+id/circlem3"
         app:layout_constraintEnd_toEndOf="@+id/circlem3"
@@ -92,11 +93,11 @@
         android:id="@+id/mediumans1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="160dp"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -109,11 +110,11 @@
         android:id="@+id/mediumans2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="160dp"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -126,11 +127,11 @@
         android:id="@+id/mediumans3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="160dp"
         android:textColor="@color/black"
         android:textSize="30sp"
         android:visibility="invisible"
@@ -143,11 +144,11 @@
         android:id="@+id/mEquation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="40sp"
@@ -159,11 +160,11 @@
         android:id="@+id/mediumScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="28dp"
         android:text="Score: 0"
         android:textColor="@color/black"
         android:textSize="20sp"
